--- a/quote.html
+++ b/quote.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<link rel="stylesheet" href="quotes.css">
 <title> QUOTES</title>
 </head>
 <body>
@@ -14,5 +15,6 @@
     </button>
   </section>
 </div>
+<script src="app.js"></script>
 </body>
 </html>
